@@ -1,11 +1,15 @@
 # Automatically generated by php-weathermap v0.95b
 
 FONTDEFINE 10 Vera.ttf 8
+FONTDEFINE 12 Vera.ttf 6
 FONTDEFINE 20 VeraIt.ttf 8
 FONTDEFINE 30 VeraIt.ttf 18
 FONTDEFINE 40 Vera.ttf 12
 
-BACKGROUND images/background1_950x625_197.jpg
+# BACKGROUND images/background1_950x625_197.jpg
+WIDTH 1000
+HEIGHT 650
+BGCOLOR 200 200 220
 HTMLSTYLE overlib
 TITLEFONT 30
 TITLE 0.96 Test Map
@@ -16,7 +20,7 @@ KEYPOS DEFAULT 470 470 Traffic Load
 KEYTEXTCOLOR 0 0 0
 KEYOUTLINECOLOR 0 0 0
 KEYBGCOLOR 255 255 255
-BGCOLOR 255 255 255
+# BGCOLOR 255 255 255
 TITLECOLOR 0 0 0
 TIMECOLOR 0 0 0
 SCALE DEFAULT 1 10   140 0 255  
@@ -48,7 +52,7 @@ SET rrd_default_path /usr/local/share/cacti/plugins/weathermap
 # DEFAULT definitions:
 NODE DEFAULT
 	LABELFONT 10
-	LABELBGCOLOR 250 250 255
+#	LABELBGCOLOR 250 250 255
 	LABELFONTCOLOR contrast
 	MAXVALUE 100
 
@@ -171,16 +175,33 @@ NODE t1
 	LABEL Server 1
 	LABELOFFSET E
 	LABELOUTLINECOLOR none
-	ICON 32 32 images/blue-ball-64.png
+	#ICON 32 32 images/blue-ball-64.png
+	ICON 32 32 nink
+	ICON 64 64 nink
+	TARGET static:30:60
 	POSITION 350 420
+	
 
 NODE t2
 	LABEL Server 2
 	LABELOFFSET E
+	USESCALE none
 	LABELOUTLINECOLOR none
-	ICON 32 32 round
+	ICON 32 32 inpie
 	POSITION 350 520
+	TARGET static:30:60
 
+NODE t3
+	USESCALE none in
+	LABEL Server 3
+	LABELOFFSET E
+	LABELOUTLINECOLOR none
+	AICONOUTLINECOLOR 0 255 0
+	AICONFILLCOLOR 255 255 0
+	ICON 32 32 outpie
+	POSITION 350 600
+	TARGET static:30:60
+	
 NODE z3
 	ZORDER 1020
 	INFOURL ontop
